[package]
name = "dsn-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#multiaddr = "0.17.1"
num_cpus = { version = "1.15.0" }
subspace-networking = { path = "../../work/subspace/subspace/crates/subspace-networking"}
subspace-farmer = { path = "../../work/subspace/subspace/crates/subspace-farmer"}
subspace-farmer-components = { path = "../../work/subspace/subspace/crates/subspace-farmer-components"}
subspace-core-primitives = { path = "../../work/subspace/subspace/crates/subspace-core-primitives"}
#subspace-networking = { git = "https://github.com/subspace/subspace", branch="main"}
#subspace-farmer = {git = "https://github.com/subspace/subspace", branch="main"}
#subspace-farmer-components = { git = "https://github.com/subspace/subspace", branch="main"}
#subspace-core-primitives = { git = "https://github.com/subspace/subspace", branch="main"}
parity-scale-codec = "3.2.1"
parking_lot = "0.12.1"
futures = "0.3.25"
tempfile = "3.3.0"
tokio = { version = "1.27.0", features = ["macros", "parking_lot", "rt-multi-thread", "signal"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.libp2p]
version = "0.52.1"
#git = "https://github.com/libp2p/rust-libp2p"
#rev = "3c5940aeadb9ed8527b6f7aa158797359085293d"
default-features = false
features = [
    "dns",
    "gossipsub",
    "identify",
    "kad",
    "macros",
    "metrics",
    "noise",
    "ping",
#    "quic",
    "request-response",
    "serde",
    "tcp",
    "tokio",
    "websocket",
    "yamux",
]

#[dependencies.libp2p]
## TODO: change when https://github.com/libp2p/rust-libp2p/pull/3178 is released
#git = "https://github.com/libp2p/rust-libp2p"
#rev = "be0b62a78fe9d72811b9eda742137cc8ddc4da35"
#default-features = false
#features = [
#    "dns",
#    "gossipsub",
#    "identify",
#    "kad",
#    "macros",
#    "metrics",
#    "mplex",
#    "noise",
#    "ping",
#    "request-response",
#    "serde",
#    "tcp",
#    "tokio",
#    "websocket",
#    "yamux",
#]


#[replace]
#"num_cpus:1.14.0" = { version = "1.15.0" }

